log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri Mar 31 14:39:29 -03 2023: 
In file included from test.c:5:
In file included from ./arraylist.c:4:
./arraylist.h:8:42: error: invalid application of 'sizeof' to an incomplete type 'ArrayList' (aka 'struct ArrayList')
  ArrayList* lista = (ArrayList*) malloc(sizeof(ArrayList));
                                         ^     ~~~~~~~~~~~
./arraylist.h:4:16: note: forward declaration of 'struct ArrayList'
typedef struct ArrayList ArrayList;
               ^
./arraylist.h:9:9: error: incomplete definition of type 'struct ArrayList'
  lista -> capacity = 2;
  ~~~~~ ^
./arraylist.h:4:16: note: forward declaration of 'struct ArrayList'
typedef struct ArrayList ArrayList;
               ^
./arraylist.h:10:9: error: incomplete definition of type 'struct ArrayList'
  lista -> size = 0;
  ~~~~~ ^
./arraylist.h:4:16: note: forward declaration of 'struct ArrayList'
typedef struct ArrayList ArrayList;
               ^
./arraylist.h:11:9: error: incomplete definition of type 'struct ArrayList'
  lista -> data = NULL;
  ~~~~~ ^
./arraylist.h:4:16: note: forward declaration of 'struct ArrayList'
typedef struct ArrayList ArrayList;
               ^
./arraylist.h:12:9: error: incomplete definition of type 'struct ArrayList'
  lista -> data=  realloc(lista -> data,sizeof(ArrayList));
  ~~~~~ ^
./arraylist.h:4:16: note: forward declaration of 'struct ArrayList'
typedef struct ArrayList ArrayList;
               ^
./arraylist.h:12:33: error: incomplete definition of type 'struct ArrayList'
  lista -> data=  realloc(lista -> data,sizeof(ArrayList));
                          ~~~~~ ^
./arraylist.h:4:16: note: forward declaration of 'struct ArrayList'
typedef struct ArrayList ArrayList;
               ^
./arraylist.h:12:41: error: invalid application of 'sizeof' to an incomplete type 'ArrayList' (aka 'struct ArrayList')
  lista -> data=  realloc(lista -> data,sizeof(ArrayList));
                                        ^     ~~~~~~~~~~~
./arraylist.h:4:16: note: forward declaration of 'struct ArrayList'
typedef struct ArrayList ArrayList;
               ^
In file included from test.c:5:
./arraylist.c:13:12: error: redefinition of 'createList'
ArrayList *createList(void) {
           ^
./arraylist.h:7:12: note: previous definition is here
ArrayList *createList(void) {
           ^
8 errors generated.
Compilation failed
0996aac
Fri Mar 31 14:41:43 -03 2023: 
In file included from test.c:5:
./arraylist.c:7:16: error: redefinition of 'ArrayList'
typedef struct ArrayList {
               ^
./arraylist.h:4:16: note: previous definition is here
typedef struct ArrayList {
               ^
In file included from test.c:5:
./arraylist.c:11:3: error: typedef redefinition with different types ('struct (unnamed struct at ./arraylist.c:7:16)' vs 'struct ArrayList')
} ArrayList;
  ^
./arraylist.h:8:3: note: previous definition is here
} ArrayList;
  ^
In file included from test.c:5:
./arraylist.c:13:12: error: redefinition of 'createList'
ArrayList *createList(void) {
           ^
./arraylist.h:10:12: note: previous definition is here
ArrayList *createList(void) {
           ^
3 errors generated.
Compilation failed
8421eae
Fri Mar 31 14:42:17 -03 2023: 
 arraylist.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
./arraylist.c:6:16: error: redefinition of 'ArrayList'
typedef struct ArrayList {
               ^
./arraylist.h:4:16: note: previous definition is here
typedef struct ArrayList {
               ^
In file included from test.c:5:
./arraylist.c:10:3: error: typedef redefinition with different types ('struct (unnamed struct at ./arraylist.c:6:16)' vs 'struct ArrayList')
} ArrayList;
  ^
./arraylist.h:8:3: note: previous definition is here
} ArrayList;
  ^
In file included from test.c:5:
./arraylist.c:12:12: error: redefinition of 'createList'
ArrayList *createList(void) {
           ^
./arraylist.h:10:12: note: previous definition is here
ArrayList *createList(void) {
           ^
3 errors generated.
Compilation failed
4d2a4c4
Fri Mar 31 14:44:22 -03 2023: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
./arraylist.c:7:16: error: redefinition of 'ArrayList'
typedef struct ArrayList {
               ^
./arraylist.h:4:16: note: previous definition is here
typedef struct ArrayList {
               ^
In file included from test.c:5:
./arraylist.c:11:3: error: typedef redefinition with different types ('struct (unnamed struct at ./arraylist.c:7:16)' vs 'struct ArrayList')
} ArrayList;
  ^
./arraylist.h:8:3: note: previous definition is here
} ArrayList;
  ^
In file included from test.c:5:
./arraylist.c:13:12: error: redefinition of 'createList'
ArrayList *createList(void) {
           ^
./arraylist.h:10:12: note: previous definition is here
ArrayList *createList(void) {
           ^
3 errors generated.
Compilation failed
ba7826e
Fri Mar 31 14:44:47 -03 2023: 
 arraylist.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
In file included from test.c:5:
./arraylist.c:7:16: error: redefinition of 'ArrayList'
typedef struct ArrayList {
               ^
./arraylist.h:4:16: note: previous definition is here
typedef struct ArrayList {
               ^
In file included from test.c:5:
./arraylist.c:11:3: error: typedef redefinition with different types ('struct (unnamed struct at ./arraylist.c:7:16)' vs 'struct ArrayList')
} ArrayList;
  ^
./arraylist.h:8:3: note: previous definition is here
} ArrayList;
  ^
In file included from test.c:5:
./arraylist.c:13:12: error: redefinition of 'createList'
ArrayList *createList(void) {
           ^
./arraylist.h:10:12: note: previous definition is here
ArrayList *createList(void) {
           ^
3 errors generated.
Compilation failed
84f8289
Fri Mar 31 14:45:03 -03 2023: 
 tests:  0|6
total_score: 0/70
be0a6f9
Fri Mar 31 14:45:41 -03 2023: 
 arraylist.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e75ee54
Fri Mar 31 14:49:33 -03 2023: 
 arraylist.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  1|5
total_score: 10/70
43c1b6d
Fri Mar 31 14:51:07 -03 2023: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e067a18
Fri Mar 31 14:57:31 -03 2023: 
 arraylist.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  3|4
total_score: 20/70
65692aa
Fri Mar 31 15:04:14 -03 2023: 
 arraylist.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  5|3
total_score: 30/70
2d7a438
Sat Apr  1 20:34:17 -03 2023: 
 arraylist.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
./arraylist.c:75:17: error: variable 'i' is uninitialized when used within its own initialization [-Werror,-Wuninitialized]
    for(int i = i; i < l -> size; i++) 
            ~   ^
1 error generated.
Compilation failed
dd01679
Sat Apr  1 20:34:53 -03 2023: 
 arraylist.c | 29 ++++++++++++-----------------
 1 file changed, 12 insertions(+), 17 deletions(-)
 tests:  8|2
total_score: 40/70
279f41c
Sat Apr  1 20:37:31 -03 2023: 
 arraylist.c | 20 ++++++++++++--------
 1 file changed, 12 insertions(+), 8 deletions(-)
 tests:  8|2
total_score: 40/70
51c79b0
